<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_orderMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_orderMsg"
        android:textColor="#673AB7"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_drink" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textColor="#009688"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_tableNo"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/ed_tableNo"
        android:inputType="textPersonName"
        android:textColorHint="#E91E63"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/tableNo"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tableNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_tableNo"
        android:textColor="#FF5722"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_drink"
        android:layout_width="90sp"
        android:layout_height="48sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:text="@string/btn_drink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tableNo" />

    <Button
        android:id="@+id/btn_meal"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_meal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tableNo" />

    <Button
        android:id="@+id/btn_reorder"
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="28dp"
        android:text="@string/btn_reOrder"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_finalDrink" />

    <TextView
        android:id="@+id/tv_finalDrink"
        android:layout_width="305dp"
        android:layout_height="150dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="12dp"
        android:text="@string/drink"
        android:textColor="#009688"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_finalMeal" />

    <TextView
        android:id="@+id/tv_finalMeal"
        android:layout_width="305dp"
        android:layout_height="40dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="28dp"
        android:text="@string/meal"
        android:textColor="#FF5722"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_orderMsg" />

</androidx.constraintlayout.widget.ConstraintLayout>